# CppCleanArchitecture

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
.github/workflows/: build.yml
cpp-clean-architecture/: README.md
cpp-clean-architecture/src/: CMakeLists.txt
cpp-clean-architecture/src/adapters/: CMakeLists.txt  crow_adapter.cpp  crow_adapter.hpp  user_adapter.cpp  user_adapter.hpp
cpp-clean-architecture/src/core/: CMakeLists.txt
cpp-clean-architecture/src/core/domain/entities/: CMakeLists.txt  user.cpp  user.hpp
cpp-clean-architecture/src/core/domain/repositories/: CMakeLists.txt  user_repository.hpp
cpp-clean-architecture/src/core/usecases/: CMakeLists.txt  user_service.cpp  user_service.hpp
cpp-clean-architecture/src/infrastructure/: CMakeLists.txt
cpp-clean-architecture/src/infrastructure/persistence/: CMakeLists.txt  in_memory_user_repository.cpp  in_memory_user_repository.hpp
cpp-clean-architecture/src/interfaces/: CMakeLists.txt
cpp-clean-architecture/src/interfaces/console/: CMakeLists.txt  main.cpp
cpp-clean-architecture/src/interfaces/rest/: CMakeLists.txt  main.cpp
cpp-clean-architecture/src/interfaces/rest/controllers/: CMakeLists.txt  user_controller.cpp  user_controller.hpp
cpp-clean-architecture/src/interfaces/rest/dto/: CMakeLists.txt  user_dto.cpp  user_dto.hpp
cpp-clean-architecture/src/interfaces/rest/server/: CMakeLists.txt  rest_server.cpp  rest_server.hpp
cpp-clean-architecture/tests/: CMakeLists.txt
cpp-clean-architecture/tests/domain_tests/: user_tests.cpp
cpp-clean-architecture/tests/infrastructure_tests/: in_memory_user_repository_tests.cpp
cpp-clean-architecture/tests/usecases_tests/: user_service_tests.cpp
